--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -81,7 +81,7 @@
     font-size: 24px;
     padding: 14px 26px;
     background-size: 200% !important;
-    background-position: left !important;
+    background-position: -5px !important;
     position: relative;
     @include transition(0.3s);
 
@@ -206,5 +206,48 @@
     //gradient button
     &:hover {
         background-position: right !important;
+    }
+
+    // icon buttons
+    &.btn-special-offer {
+        padding: 0 40px;
+        border-radius: 10px;
+        font-size: 14px;
+        color: $white;
+        height: 40px;
+        line-height: 40px;
+        background-color: #ed0373;
+
+        &:before {
+            background-image: url('../images/icons/special.svg');
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+        }
+
+        &:after {
+            background-image: url('../images/icons/plus-solid.svg');
+            background-size: 30%;
+            position: absolute;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+        }
+
+        &.btn-icon {
+            &:before,
+            &:after {
+                content: '';
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+        }
     }
 }
