--- a/resources/sass/pages/resultspage.scss
+++ b/resources/sass/pages/resultspage.scss
@@ -185,6 +185,16 @@
 
     .sortCatSection3 {
         flex: 1 0 14%;
+        padding: 10px 10px;
+
+        .btn-area-upper {
+        }
+
+        .btn-area-lower {
+            border-top: 1px solid #d7d7d7;
+            padding-top: 10px;
+
+        }
     }
 
 
