range slider styled using plugin

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,6 +40,9 @@
 @import 'components/basic/textbox';
 @import 'components/basic/helplink';
 @import 'components/basic/lightbox';
+@import 'components/basic/range-style';
+//@import '../../node_modules/input-range-scss/inputrange';
 @import 'components/basic/range';
+
 
 
