--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -221,6 +221,7 @@
             padding: 5px 15px 5px 40px;
             display: inline-block;
             text-align: left;
+            max-width: 117px;
 
             &:before {
                 content: '';
@@ -249,6 +250,7 @@
             height: 40px;
             line-height: 13px;
             background-color: $pink;
+            min-width: 160px;
 
             &:before {
                 background-image: url('../images/icons/special.svg');
