--- a/resources/sass/pages/resultspage.scss
+++ b/resources/sass/pages/resultspage.scss
@@ -223,10 +223,13 @@
     }
 
     .sortCatSection2Child {
-        //@include uniformAlignment;
         flex: 1;
-        font-weight: 600;
         @include flex-center;
+        /* Style for "5.3 Weeks" */
+        font-size: 16px;
+        font-weight: 400;
+        letter-spacing: -0.8px;
+        line-height: 20px;
     }
 
     .sortCatItem {
@@ -237,17 +240,29 @@
         }
     }
 
-    .sortItemTitle,
+    .sortItemTitle {
+        font-size: 16px;
+        font-weight: 500;
+        letter-spacing: -0.8px;
+        line-height: 19.2px;
+        margin-bottom: 4px;
+    }
+
     .sortItemLocation {
-        //width: 240px;
-        font-size: .9em;
-        line-height: 15px;
+        color: #040202;
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: -0.7px;
+        line-height: 1.3;
+        margin-bottom: 2px;
     }
 
     .findLink {
-        position: relative;
-        font-size: .9em;
-        top: -20px;
+        color: #00cecd;
+        font-size: 14px;
+        font-weight: 700;
+        letter-spacing: -0.7px;
+        //line-height: 19.2px;
     }
 
     .NHSHospital, .privateHospital {
