consultant button added

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -58,6 +58,7 @@ $centerOnPage:  auto;
 // BS overrides
 $btn-border-radius: 100px;
 $btn-transition: $transition;
+$btn-border-width: 0;
 
 //POSITIONS
 $relative: relative;
