--- a/resources/sass/components/basic/button.scss
+++ b/resources/sass/components/basic/button.scss
@@ -213,6 +213,36 @@
             @include icon-bg-center;
         }
 
+        &.btn-arrow-right {
+            background: #649ef7;
+            background: linear-gradient(-90deg, #649ef7,#1b70f3,#1b70f3,#1b70f3);
+            background-size: 200%;
+            background-position: right;
+            border-radius: 100px;
+            height: 50px;
+            line-height: 50px;
+            font-size: 22px;
+            padding: 0 60px 0 20px;
+            position: relative;
+
+            &:after {
+                background-image: url('../images/icons/up-arrow.svg');
+                @include icon-bg-center(30%);
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                width: 50px;
+                height: 50px;
+                line-height: 50px;
+                transform: rotate(90deg);
+            }
+
+            &:hover {
+                background-position: left;
+            }
+        }
+
         &.btn-consultant {
             /* Style for "Consultant" */
             height: 20px;
