--- a/resources/sass/pages/homepage.scss
+++ b/resources/sass/pages/homepage.scss
@@ -211,6 +211,15 @@
                     //top: -289.25px;
                     //box-shadow: 0px 0px 0px #3686a3;
                     text-decoration: none !important;
+
+                    .btn-read-more {
+                        background-position: right;
+                    }
+
+                    .icon .overlay {
+                        background-color: rgba(237,3,115,0.3);
+                    }
+
                 }
 
                 a {
@@ -222,6 +231,20 @@
 
                 .icon {
                     margin: 20px 0;
+                    position: relative;
+
+                    .overlay {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        transition: $transition;
+                    }
+
+                    img {
+                        width: 100%;
+                    }
                 }
 
                 .title {
