--- a/resources/sass/components/_pagination.scss
+++ b/resources/sass/components/_pagination.scss
@@ -1,3 +1,60 @@
 .pagination {
-    margin:auto;
+    margin: auto;
+}
+
+.pagination {
+    .page-item {
+        &:first-child,
+        &:last-child {
+            display: none;
+        }
+
+        &.disabled {
+            .page-link {
+                border: none;
+            }
+        }
+
+        .page-link {
+            display: inline-block;
+            padding: 0;
+            margin: 0 3px;
+            width: 36px;
+            height: 36px;
+            background-color: $white;
+            border: 2px solid $teal;
+            text-align: center;
+            line-height: 32px;
+            color: $teal;
+            font-size: 20px;
+            font-weight: 600;
+            border-radius: 10px;
+            @include transition(0.3s);
+        }
+
+        &.active {
+            .page-link {
+                background-color: $teal;
+                color: $white;
+                cursor: default;
+            }
+        }
+
+        &:hover .page-link {
+            background-color: $teal;
+            color: $white;
+        }
+
+    }
+
+    .sep {
+        float: left;
+        width: 36px;
+        height: 36px;
+        text-align: center;
+        line-height: 32px;
+        color: $teal;
+        font-size: 28px;
+
+    }
 }
