--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -45,6 +45,7 @@
 @import 'components/basic/lightBox';
 @import 'components/basic/rangeStyle';
 @import 'components/basic/range';
+@import 'components/basic/popOver';
 
 
 
