--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -11,7 +11,8 @@
     border-radius: 15px;
     border: none;
 
-    .link-popover {
+    a {
+        color: #000;
         text-decoration: underline;
     }
 
@@ -19,7 +20,12 @@
         //box-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
         border: none;
         border-radius: 15px 15px 0 0;
+    }
 
+    .popover-body {
+        p:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
