--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -11,7 +11,7 @@
     border-radius: 15px;
     border: none;
 
-    a {
+    .link {
         color: #000;
         text-decoration: underline;
     }
@@ -27,5 +27,31 @@
             margin-bottom: 0;
         }
     }
+
+    &-large {
+        border: 4px solid #000000;
+        border-radius: 20px;
+        max-width: 273px;
+
+        .popover-body {
+            padding: 25px;
+            font-size: 14px;
+            font-weight: 400;
+            letter-spacing: -0.7px;
+            line-height: 16.8px;
+
+            // Leading heading
+            .bold {
+                font-size: 16px;
+                font-weight: 700;
+            }
+        }
+
+        .arrow {
+
+        }
+    }
 }
+
+
 
