added modal copy styles

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -80,3 +80,7 @@ $popover-arrow-width: 12px;
 $popover-arrow-height: 9px;
 $popover-arrow-outer-color: transparent;
 $popover-arrow-color: #fff;
+
+// Modal
+$modal-inner-padding: 0;
+$modal-content-border-radius: 16px;
