NHS enquiry modal layout done

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -84,3 +84,10 @@ $popover-arrow-color: #fff;
 // Modal
 $modal-inner-padding: 0;
 $modal-content-border-radius: 16px;
+
+// Modal close buttons
+$close-text-shadow: 0;
+$close-text-color: red;
+$close-font-weight: 400;
+$close-font-size: 1rem;
+
