special offers modal opening from enquire modal

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -231,6 +231,10 @@
         font-weight: 400;
         letter-spacing: -0.8px;
         line-height: 20px;
+
+        p {
+            margin-bottom: 0;
+        }
     }
 
     .sortCatItem {
