--- a/resources/sass/components/_compare.scss
+++ b/resources/sass/components/_compare.scss
@@ -4,22 +4,39 @@
     left: 0;
     width: 100%;
     background-color: $teal;
-    z-index: 1000;
+    z-index: 1060;
+
     .compare-hospitals-header {
         position: relative;
         width: 100%;
         max-width: 1220px;
         margin: 0 auto;
         padding: 0 20px;
-        .compare-button-title {
-            float: left;
-            //background-color: $teal;
-            padding: 15px 30px;
+
+        ul {
+            list-style: none;
+            li {
+                a {
+                    display: inline-block;
+                    color: $white;
+                    padding: 14px;
+                    font-size: 18px;
+                    font-weight: 400;
+                    letter-spacing: -0.9px;
+                }
+            }
         }
+        .compare-button-title {
+            p {
+                margin: 0;
+                color: $white;
+            }
+        }
+
         .compare-arrow {
-            float: right;
-            width: 50px;
-            height: 50px;
+            display: inline-block;
+            width: 12px;
+            height: 7px;
             background-color: $teal;
             background-image: url('../images/up-arrow.svg');
             background-size: 50%;
@@ -27,22 +44,26 @@
             background-position: center;
         }
     }
+
     .compare-hospitals-content {
-        max-height: 0;
+
+        &.hidden {
+            transform: translateY(-100%);
+        }
+
         .container {
             position: relative;
             width: 100%;
             max-width: 1220px;
             margin: 0 auto;
             padding: 0 20px;
-            background-color: $white;
+
             .main-col {
-                float: left;
                 width: 340px;
                 padding: 40px 40px 0 0;
             }
+
             .item-col {
-                float: left;
                 //width: 340px;
                 padding: 40px 40px 0 0;
             }
