--- a/resources/sass/components/basic/_modal.scss
+++ b/resources/sass/components/basic/_modal.scss
@@ -5,25 +5,26 @@
         border-radius: 16px 0 16px 16px;
     }
 
-    &.modal-enquire {
-        .close {
-            right: 0;
-            width: 61px;
-            height: 29px;
-            border-radius: 31px;
-            background-color: #000000;
-            z-index: 5;
-            opacity: 1;
-            transform: translate(50%, -50%);
+    .close {
+        right: 0;
+        width: 61px;
+        height: 29px;
+        border-radius: 31px;
+        background-color: #000000;
+        z-index: 5;
+        opacity: 1;
+        transform: translate(50%, -50%);
 
 
-            span {
-                background-color: inherit;
-            }
+        span {
+            background-color: inherit;
         }
+    }
+
+    &.modal-enquire {
 
         .modal-copy {
-            /* Style for "Lorem ipsu" */
+            /* Style for "Loem ipsu" */
             font-size: 16px;
             font-weight: 400;
             letter-spacing: -0.8px;
@@ -34,21 +35,27 @@
             width: 100%;
             max-width: 820px;
         }
+
+        .col-inner {
+            &__left {
+                padding: 30px;
+            }
+
+            &__right {
+                padding: 60px 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                border-radius: 0 0 16px 0;
+            }
+        }
     }
 
-    .col-inner {
-        &__left {
-            padding: 30px;
-        }
-
-        &__right {
-            padding: 60px 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            border-radius: 0 0 16px 0;
+    &.modal-special {
+        .modal-body {
+            background-image: linear-gradient(252deg, #d57ca6 0%, #ed0373 100%);
+            padding: 22px;
         }
     }
-
 }
