--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -334,15 +334,59 @@
                 line-height: 40px;
             }
 
-            &:before {
-                background-image: url('../images/icons/special.svg');
+        }
+
+        &.btn-special-offer-reverse {
+            padding: 13px 20px;
+            border-radius: 10px;
+            font-size: 14px;
+            color: $pink;
+            height: 40px;
+            line-height: 13px;
+            background-color: $white;
+            min-width: 160px;
+
+            &:after {
+                background-image: url('../images/icons/plus-solid.svg');
+                @include icon-bg-center(30%);
                 position: absolute;
-                left: 0;
+                right: 0;
                 top: 0;
                 bottom: 0;
                 width: 40px;
                 height: 40px;
                 line-height: 40px;
+            }
+
+        }
+
+        // Button on the floating green bar
+        &.btn-special-tab {
+            padding: 0px 20px 0px 65px;
+            color: $white;
+            height: 60px;
+            line-height: 60px;
+            background-color: $pink;
+            min-width: 160px;
+            //width: 190px;
+            border-radius: 10px 10px 0 0;
+            background-image: linear-gradient(260deg, #1b71f3 0%, #00cecd 100%);
+            font-size: 18px;
+            font-weight: 500;
+            letter-spacing: -0.9px;
+
+            &:before {
+                background-image: url('../images/icons/special.svg');
+                @include icon-bg-center(50%);
+                left: 0;
+                top: 0;
+                width: 60px;
+                height: 60px;
+                line-height: 60px;
+            }
+
+            &:hover {
+                background-position: right;
             }
         }
     }
