Helplinks on homepage - right side of banner.

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -277,6 +277,29 @@
             }
         }
 
+        &.btn-close__small {
+            /* Style for "Consultant" */
+            height: 20px;
+            line-height: 20px;
+            font-size: 12px;
+            font-weight: 400;
+            letter-spacing: -0.6px;
+            padding: 0 20px 0 12px;
+
+            &:after {
+                background-image: url('../images/icons/up-arrow.svg');
+                @include icon-bg-center(30%);
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                width: 20px;
+                height: 20px;
+                line-height: 20px;
+                transform: rotate(90deg);
+            }
+        }
+
         &.btn-enquire {
             border-radius: 10px;
             background: $blue;
@@ -322,6 +345,18 @@
             background-color: $pink;
             min-width: 160px;
 
+            &:before {
+                background-image: url('../images/icons/special.svg');
+                @include icon-bg-center(50%);
+                position: absolute;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                width: 40px;
+                height: 40px;
+                line-height: 40px;
+            }
+
             &:after {
                 background-image: url('../images/icons/plus-solid.svg');
                 @include icon-bg-center(30%);
@@ -339,6 +374,7 @@
         &.btn-special-offer-reverse {
             padding: 13px 20px;
             border-radius: 10px;
+            border: 1px solid $pink;
             font-size: 14px;
             color: $pink;
             height: 40px;
@@ -346,8 +382,20 @@
             background-color: $white;
             min-width: 160px;
 
+            &:before {
+                background-image: url('../images/icons/special-pink.svg');
+                @include icon-bg-center(50%);
+                position: absolute;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                width: 40px;
+                height: 40px;
+                line-height: 40px;
+            }
+
             &:after {
-                background-image: url('../images/icons/plus-solid.svg');
+                background-image: url('../images/icons/plus-solid-pink.svg');
                 @include icon-bg-center(30%);
                 position: absolute;
                 right: 0;
