Special offer slide out toggling as required

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -47,6 +47,7 @@
 @import 'components/basic/range';
 @import 'components/basic/popOver';
 @import 'components/basic/modal';
+@import 'components/basic/specialOFferSlide';
 
 
 
