--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -1,59 +1,4 @@
 //BUTTONS
-.hospBtn {
-    font-size: 1.125rem;
-    line-height: 1.5;
-    border-radius: 24px;
-    color: $white;
-    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
-    width: $fullWidth;
-    text-align: center;
-    margin: auto;
-    padding-top: 10px;
-}
-
-.blueOval {
-    padding: 15px;
-    border-radius: 10px;
-    background: #1b71f3;
-    color: $white;
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: -0.7px;
-    line-height: 13px;
-    transition: $transition;
-    position: relative;
-
-    &:hover {
-        color: $white;
-        text-decoration: none;
-        opacity: 0.8;
-    }
-}
-
-
-.greenOvalTop {
-    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
-    border-radius: 12px 12px 0 0;
-}
-
-
-.greenOval {
-    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
-    width: 219px;
-    height: 58px;
-    border-radius: 29px;
-    letter-spacing: -1.1px;
-    line-height: 24px;
-    padding: 15px 40px;
-}
-
-.greenOval:hover, .greenOvalTop:hover {
-    background: #00e09d;
-    //background: -webkit-linear-gradient(legacy-direction(90deg), #00e09d,#00cecd,#00e09d);
-    background: linear-gradient(90deg, #00e09d, #00cecd, #00e09d);
-    color: $white;
-    text-decoration: none;
-}
 
 .submitBtn {
     background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%) !important;
@@ -69,6 +14,7 @@
     background-position: -5px;
     position: relative;
     @include transition(0.3s);
+    cursor: pointer;
 
     &:hover {
         color: $white;
@@ -200,7 +146,6 @@
         background-size: 50%;
         flex: 0 0 32px;
         padding: 0;
-        cursor: pointer;
     }
 
     &.btn-pink {
@@ -346,6 +291,45 @@
                 color: $white;
                 text-decoration: none;
                 background-color: darken($blue, 5%);
+            }
+        }
+
+        &.btn-enquire-pink {
+            border-radius: 10px;
+            background: $white;
+            color: $pink;
+            font-size: 12px;
+            font-weight: 400;
+            letter-spacing: -0.7px;
+            line-height: 13px;
+            height: 40px;
+            transition: $transition;
+            position: relative;
+            padding: 5px 15px 5px 40px;
+            display: inline-block;
+            text-align: left;
+            max-width: 117px;
+
+            &:before {
+                content: '';
+                background-image: url('../images/icons/circle-check-pink.svg');
+                @include icon-bg-center;
+                position: absolute;
+                left: 0px;
+                top: 0px;
+                width: 22px;
+                width: 40px;
+                height: 40px;
+            }
+
+            &:hover {
+                color: $white;
+                background-color: $pink;
+                text-decoration: none;
+                &:before {
+                    background-image: url('../images/icons/circle-check.svg');
+
+                }
             }
         }
 
