--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -1,7 +1,15 @@
 //BUTTONS
 
-.submitBtn {
-    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%) !important;
+.btn-submit-results {
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: -0.9px;
+    line-height: 20px;
+    background-image: linear-gradient(270deg, #00cecd 0%, #00d7b5 56%, #00df9d 100%);
+
+    &:hover {
+        background-position: right;
+    }
 }
 
 // New set of styles based on RC UI kit
