- Approved Tom's code

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,7 +29,7 @@
 
 
 // COMPONENTS
-@import 'components/whyChoose';
+@import 'components/_whychoose';
 @import 'components/howSection';
 @import 'components/healthChoice';
 @import 'components/logo';
@@ -45,7 +45,7 @@
 @import 'components/basic/lightBox';
 @import 'components/basic/rangeStyle';
 @import 'components/basic/range';
-@import 'components/basic/popOver';
+@import 'components/basic/_popover';
 @import 'components/basic/modal';
 @import 'components/basic/specialOFferSlide';
 
