Homepage promo list popovers sorted

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -245,7 +245,7 @@
         }
 
         &.btn-close__small {
-            /* Style for "Consultant" */
+            color: $white;
             height: 20px;
             line-height: 20px;
             font-size: 12px;
@@ -264,6 +264,11 @@
                 height: 20px;
                 line-height: 20px;
                 transform: rotate(90deg);
+            }
+
+            &:hover {
+                color: $white;
+
             }
         }
 
