Sort cat header tooltips added

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -158,6 +158,13 @@
     .sortCategoriesHeader {
         width: 1180px;
         margin: auto;
+
+        .sortCatSection3 {
+            &:before,
+            &:after {
+                display: none;
+            }
+        }
     }
 
     .sortCategories {
