Build first draft of enquiry form

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -250,6 +250,7 @@
         font-weight: 400;
         letter-spacing: -0.8px;
         line-height: 20px;
+        text-align: center;
 
         p {
             margin-bottom: 0;
