enquiry input styling added to variables scss

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -91,3 +91,9 @@ $close-text-color: red;
 $close-font-weight: 400;
 $close-font-size: 1rem;
 
+// Forms
+$input-padding-y: 0;
+$input-padding-x: 1rem;
+$input-height: 3;
+$input-line-height: 3;
+$input-placeholder-color: #1c1c1c;;
