--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,12 +29,13 @@
 
 
 // COMPONENTS
-@import 'components/_whychoose';
+@import 'components/whychoose';
 @import 'components/howSection';
 @import 'components/healthChoice';
 @import 'components/logo';
 @import 'components/pagination';
 @import 'components/compare';
+@import 'components/form';
 
 // BASIC COMPONENTS
 @import 'components/banner';
@@ -45,7 +46,7 @@
 @import 'components/basic/lightBox';
 @import 'components/basic/rangeStyle';
 @import 'components/basic/range';
-@import 'components/basic/_popover';
+@import 'components/basic/popover';
 @import 'components/basic/modal';
 @import 'components/basic/specialOFferSlide';
 
