- Removed the old tooltips with the new ones;

--- a/resources/sass/components/basic/_helpLink.scss
+++ b/resources/sass/components/basic/_helpLink.scss
@@ -27,7 +27,7 @@
 .home-page {
     .box {
         .help-link {
-            right: 40px;
+            right: 60px;
             top: 20px;
         }
     }
@@ -35,8 +35,8 @@
 
 .results-page {
     .help-link {
-        top: 0;
-        right: 18px;
+        top: 3px;
+        right: 20px;
     }
 }
 
