Private enquiry form styling complete with dynamic hospital titles added

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -96,4 +96,5 @@ $input-padding-y: 0;
 $input-padding-x: 1rem;
 $input-height: 3;
 $input-line-height: 3;
-$input-placeholder-color: #1c1c1c;;
+$input-placeholder-color: #1c1c1c;
+$input-font-weight: 500;
