--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -39,7 +39,7 @@ textarea {
     top: 10px;
 }
 
-input:not([type="range"]):not([type="submit"]),
+input:not([type="range"]):not([type="submit"]):not([type="checkbox"]),
 select {
     border: 2px solid #ebebeb; /*Removes border*/
     border-radius: 10px;
@@ -126,7 +126,67 @@ select::-ms-expand {
         border-radius: 10px;
         border: 2px solid #ebebeb;
         background-color: #ffffff;
-        margin-bottom: 15px;
+        margin-bottom: 12px;
+    }
+
+    select.form-control {
+        padding-right: 40px;
+    }
+
+    .row {
+        margin-left: -6px;
+        margin-right: -6px;
+
+        .col {
+            padding-left: 6px;
+            padding-right: 6px;
+        }
     }
 }
 
+.checkbox {
+    input[type="checkbox"] {
+        position: absolute;
+        left: -200vw;
+
+        &:checked {
+            +label {
+                font-weight: 600;
+
+                &:before {
+                    content: '';
+                    background-image: url('../images/icons/check-solid.svg');
+                    @include icon-bg-center(70%);
+                }
+            }
+        }
+    }
+
+    label {
+        display: flex;
+        align-items: flex-start;
+        cursor: pointer;
+        color: $white;
+        font-size: 10px;
+        font-weight: 400;
+        letter-spacing: -0.5px;
+        line-height: 12px;
+
+        &:before {
+            content: "";
+            background-color: #fff;
+            display: inline-block;
+            width: 26px;
+            height: 26px;
+            border-radius: 10px;
+            border: 2px solid #ebebeb;
+            flex: 0 0 26px;
+            margin-right: 11px;
+            text-align: center;
+            line-height: 26px;
+            font-size: 10px;
+            transition: font-size 0.3s;
+            cursor: pointer;
+        }
+    }
+}
